# minitel-server

./: .env.example  Cargo.toml  README.md  pages.json  teletel.py  teletel.vdt
ecrans/: horoscope.footer.vdt  horoscope.header.vdt  horoscope.vdt  meteo.degage.vdt  meteo.pluie_forte.vdt  meteo.vdt  teletel.guide.vdt
src/: main.rs  modem.rs  page.rs
src/page/: config.rs  mod.rs  zone.rs
src/services/: mod.rs
src/services/horoscope/: mod.rs
src/services/meteo/: mod.rs
