[package]
name = "minitel-server"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.8"
html-escape = "0.2.13"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["blocking"] }
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serialport = "4.7.2"
unidecode = "0.3.0"
